--- a/renewableenergytoken-app/package.json
+++ b/renewableenergytoken-app/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+	"@openzeppelin/contracts": "^2.3.0",
     "express": "^4.16.4"
   }
 }
